[package]
name = "usch"
version = "0.2.0"
edition = "2021"

[dependencies]
cpal = "0.13"
egui = { version = "0.17", optional = true }
egui_wgpu_backend = { version = "0.17", optional = true }
egui_winit_platform = { version = "0.14", optional = true }
encase = { version = "0.2", features = ["mint"] }
lewton = { version = "0.10", optional = true }
mint = "0.5"
naga = { version = "0.8.5", optional = true }
notify = { version = "4.0", optional = true }
pollster = "0.2"
wgpu = { version = "0.12", default-features = false }
winit = "0.26"

[features]
default = ["editor", "glsl", "ogg"]
editor = [
    "dep:egui_wgpu_backend",
    "dep:egui_winit_platform",
    "dep:egui",
    "dep:notify",
    ]
glsl = ["naga/glsl-in", "naga/wgsl-out"]
ogg = ["dep:lewton"]
